force-app/config/objects/Agent_Match_Condition__mdt/Agent_Match_Condition__mdt.object-meta.xml
<CustomObject>
    <description>Links an Agent Capability to a Routing Config. Controls mandatory vs optional matching per config. Field_API_Name__c lives here (not on Agent_Capability__mdt) so the same capability dimension can map to different fields on different objects.</description>
    <label>Agent Match Condition</label>
    <pluralLabel>Agent Match Conditions</pluralLabel>
</CustomObject>