force-app/config/objects/Agent_Match_Condition__mdt/fields/Agent_Capability__c.field-meta.xml
<CustomField>
    <fullName>Agent_Capability__c</fullName>
    <description>Which capability dimension to evaluate against agents. References an Agent_Capability__mdt record.</description>
    <label>Agent Capability</label>
    <referenceTo>Agent_Capability__mdt</referenceTo>
    <relationshipLabel>Agent Match Conditions</relationshipLabel>
    <relationshipName>Agent_Match_Conditions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>