force-app/config/objects/Agent_Match_Condition__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <description>The work record field this capability matches against (e.g. Province__c on Case, Service_Region__c on WorkOrder). Lives on Agent_Match_Condition (not Agent_Capability) so the same capability dimension can map to different field names on different objects.</description>
    <label>Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>