force-app/config/objects/Agent_Match_Condition__mdt/fields/Is_Mandatory__c.field-meta.xml
<CustomField>
    <fullName>Is_Mandatory__c</fullName>
    <defaultValue>true</defaultValue>
    <description>True = agent EXCLUDED entirely on mismatch (hard filter). False = optional — mismatch does not disqualify the agent. v2 uses binary match (no scoring). All mandatory conditions must match for an agent to be eligible.</description>
    <label>Is Mandatory</label>
    <type>Checkbox</type>
</CustomField>