force-app/config/objects/Agent_Match_Condition__mdt/fields/Routing_Config__c.field-meta.xml
<CustomField>
    <fullName>Routing_Config__c</fullName>
    <description>Parent Routing Config record. Links this match condition to a specific routing scenario.</description>
    <label>Routing Config</label>
    <referenceTo>Routing_Config__mdt</referenceTo>
    <relationshipLabel>Agent Match Conditions</relationshipLabel>
    <relationshipName>Agent_Match_Conditions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>