force-app/config/objects/Agent_Match_Condition__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Evaluation order. Mandatory conditions are checked first by convention. Lower numbers evaluate first.</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>